// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lesson Page Should render Error component if route is invalid 1`] = `
<div>
  <nav
    class="navbar navbar-expand-lg navbar-light justify-content-between bg-white"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand text-primary font-weight-bold"
        href="/"
      >
        C0D3
      </a>
      <div
        id="navbarNav"
      >
        <div
          class="navbar-nav collapse navbar-collapse"
        >
          <div
            class="navbar-nav collapse navbar-collapse"
          >
            <a
              class="nav-item nav-link"
              href="/curriculum"
            >
              Curriculum
            </a>
            <a
              class="nav-item nav-link"
              href="https://github.com/garageScript/c0d3-app"
              rel="noopener noreferrer"
              target="_blank"
            >
              Repo
            </a>
            <a
              class="nav-item nav-link"
              href="https://www.notion.so/Table-of-Contents-a83980f81560429faca3821a9af8a5e2"
              rel="noopener noreferrer"
              target="_blank"
            >
              Journey
            </a>
            <a
              class="nav-item nav-link"
              href="https://chat.c0d3.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Help
            </a>
            <a
              class="nav-item nav-link"
              href="/contributors"
            >
              Contributors
            </a>
            <div
              class="dropdown"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-none"
                type="button"
              >
                Admin
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="d-flex"
      >
        <a
          class="btn btn-secondary border overflow-hidden p-2 text-truncate"
          href="/profile/fakeusername"
        >
           fakeusername
        </a>
        <button
          class="btn border ml-2"
          style="color: rgb(41, 41, 41);"
        >
          Logout
        </button>
      </div>
    </div>
  </nav>
  <div
    class="container"
  >
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="d-flex col-sm-3 align-items-center justify-content-center"
        >
          <div
            class="text-center mt-3"
          >
            <div
              style="color: rgb(41, 41, 41); font-size: 1.5rem;"
            >
              <strong>
                Page not found
              </strong>
            </div>
            <div
              style="color: rgb(41, 41, 41); font-size: 1rem;"
            >
              Page not found
            </div>
            <a
              class="btn btn-primary py-3 px-5 mt-3"
              href="/"
            >
              <h3
                class="font-weight-bold"
              >
                Back
              </h3>
            </a>
          </div>
        </div>
        <div
          class="mb-3 col-sm-9"
        >
          <img
            height="1200"
            layout="responsive"
            objectfit="contain"
            src="/assets/errors/404.svg"
            width="1200"
          />
        </div>
      </div>
    </div>
  </div>
  <footer
    class="mt-5 font-weight-light text-center pb-5 text-muted"
  >
    © Copyright 2020 GarageScript
    <br />
    All Rights Reserved
  </footer>
</div>
`;

exports[`Lesson Page Should render empty submissions 1`] = `
<div>
  <div>
    <nav
      class="navbar navbar-expand-lg navbar-light justify-content-between bg-white"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand text-primary font-weight-bold"
          href="/"
        >
          C0D3
        </a>
        <div
          id="navbarNav"
        >
          <div
            class="navbar-nav collapse navbar-collapse"
          >
            <div
              class="navbar-nav collapse navbar-collapse"
            >
              <a
                class="nav-item nav-link"
                href="/curriculum"
              >
                Curriculum
              </a>
              <a
                class="nav-item nav-link"
                href="https://github.com/garageScript/c0d3-app"
                rel="noopener noreferrer"
                target="_blank"
              >
                Repo
              </a>
              <a
                class="nav-item nav-link"
                href="https://www.notion.so/Table-of-Contents-a83980f81560429faca3821a9af8a5e2"
                rel="noopener noreferrer"
                target="_blank"
              >
                Journey
              </a>
              <a
                class="nav-item nav-link"
                href="https://chat.c0d3.com"
                rel="noopener noreferrer"
                target="_blank"
              >
                Help
              </a>
              <a
                class="nav-item nav-link"
                href="/contributors"
              >
                Contributors
              </a>
              <div
                class="dropdown"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="dropdown-toggle btn btn-none"
                  type="button"
                >
                  Admin
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="d-flex"
        >
          <a
            class="btn btn-secondary border overflow-hidden p-2 text-truncate"
            href="/profile/fakeusername"
          >
             fakeusername
          </a>
          <button
            class="btn border ml-2"
            style="color: rgb(41, 41, 41);"
          >
            Logout
          </button>
        </div>
      </div>
    </nav>
    <div
      class="container"
    >
      <div
        class="row mt-4"
      >
        <div
          class="card shadow-sm mt-3 col-12 px-0 pt-3 border-0"
        >
          <div
            class="card-body p-0"
          >
            <div
              class="d-flex mb-3 px-3"
            >
              <img
                alt="lesson-cover"
                class="lessonTitleCard__lesson-cover mr-3"
                src="/assets/curriculum/js-1-cover.svg"
              />
              <div>
                <p
                  class="m-0"
                >
                  <a
                    class=""
                    href="/curriculum"
                  >
                    Go Back
                  </a>
                </p>
                <h1
                  class="lessonTitleCard__lesson-title"
                >
                  Variables & Functions
                </h1>
              </div>
            </div>
            <div
              class="card-footer bg-white p-0"
            >
              <a
                class="btn border-right rounded-0 px-4 py-3"
                href="https://www.notion.so/garagescript/JS-1-Functions-01dd8400b85f40d083966908acbfa184"
                rel="noopener noreferrer"
                target="_blank"
              >
                LESSON
              </a>
              <a
                class="btn border-right rounded-0 px-4 py-3"
                href="/curriculum/2"
              >
                CHALLENGES
              </a>
              <a
                class="btn border-right rounded-0 px-4 py-3"
                href="/review/2"
              >
                REVIEW
              </a>
            </div>
          </div>
        </div>
        <div
          class="submissions-container container p-0"
        />
      </div>
    </div>
    <footer
      class="mt-5 font-weight-light text-center pb-5 text-muted"
    >
      © Copyright 2020 GarageScript
      <br />
      All Rights Reserved
    </footer>
  </div>
</div>
`;

exports[`Lesson Page Should render new submissions 1`] = `
<div>
  <div
    class="container-fluid bg-primary d-flex flex-column justify-content-center align-items-center"
    style="min-height: 100vh; position: fixed; top: 0px; left: 0px; z-index: 1;"
  >
    <h1
      class="text-white font-weight-bold display-3"
      style="font-family: 'PT Mono', sans-serif;"
    >
      C0D3
    </h1>
    <div
      class="spinner-border text-white"
      role="status"
    >
      <h1
        class="sr-only"
      >
        Loading...
      </h1>
    </div>
  </div>
</div>
`;
